# lula.py

./: .env  .gitignore  LICENSE  README.md  lula.py  pyproject.toml  requirements.txt
.github/workflows/: fix-format.yml  quality.yml
data/: index.html
docker/: Dockerfile  docker-compose.yml  dockerfile  install_portainer.sh
libs/: requirements.txt
libs/pandas_ta/: __init__.py  _meta.py  core.py  custom.py
libs/pandas_ta/candles/: cdl_doji.py  cdl_inside.py  cdl_pattern.py  cdl_z.py  ha.py
libs/pandas_ta/cycles/: dsp.py  ebsw.py
libs/pandas_ta/momentum/: ao.py  apo.py  bias.py  bop.py  brar.py  cci.py  cfo.py  cg.py  cmo.py  coppock.py  cti.py  dm.py  er.py  eri.py  fisher.py  inertia.py  kdj.py  kst.py  lrsi.py  macd.py  mom.py  pgo.py  po.py  ppo.py  psl.py  pvo.py  qqe.py  roc.py  rsi.py  rsx.py  rvgi.py  slope.py  smi.py  squeeze.py  squeeze_pro.py  stc.py  stoch.py  stochrsi.py  td_seq.py  trix.py  (+5 more)
libs/pandas_ta/overlap/: alma.py  dema.py  ema.py  fwma.py  hilo.py  hl2.py  hlc3.py  hma.py  hwma.py  ichimoku.py  jma.py  kama.py  linreg.py  mcgd.py  midpoint.py  midprice.py  mmar.py  ohlc4.py  pwma.py  rainbow.py  rma.py  sinwma.py  sma.py  ssf.py  supertrend.py  swma.py  t3.py  tema.py  trima.py  vidya.py  vwap.py  vwma.py  wcp.py  wma.py  zlma.py
libs/pandas_ta/performance/: drawdown.py  log_return.py  percent_return.py
libs/pandas_ta/statistics/: entropy.py  kurtosis.py  mad.py  median.py  quantile.py  skew.py  stdev.py  tos_stdevall.py  variance.py  zscore.py
libs/pandas_ta/trend/: adx.py  amat.py  aroon.py  chop.py  cksp.py  decay.py  decreasing.py  dpo.py  increasing.py  long_run.py  pmax.py  psar.py  qstick.py  short_run.py  tsignals.py  ttm_trend.py  vhf.py  vortex.py  xsignals.py
libs/pandas_ta/utils/: _core.py  _math.py  _metrics.py  _time.py
libs/pandas_ta/utils/data/: alphavantage.py  yahoofinance.py
libs/pandas_ta/volatility/: aberration.py  accbands.py  atr.py  bbands.py  donchian.py  hwc.py  kc.py  massi.py  natr.py  pdist.py  rvi.py  thermo.py  true_range.py  ui.py
libs/pandas_ta/volume/: ad.py  adosc.py  aobv.py  cmf.py  efi.py  eom.py  kvo.py  mfi.py  nvi.py  obv.py  pvi.py  pvol.py  pvr.py  pvt.py  vfi.py  vp.py
scripts/: conexion_test.py  connection_test.py  install_lula.sh  install_tensorflow.sh  npu_focus.py  testnet-cleaner.py  trainer.py
scripts/trainer/: convert.py  npu_focus.py  trainer.py  trainer_requirements.txt
src/: __init__.py  analysis.py  brain.py  connection.py  feelings.py  grow.py  guardian.py  lullaby.py  main.py  security.py  show.py  strategy.py  sub.py
