[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lula-bot"
version = "2.1.2"
description = "AI Crypto Trading Bot (Lullaby Protocol)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "CypherPunk Dev", email = "lula@sovereign.net"}]

# --- DEPENDENCIAS (SIN PANDAS_TA) ---
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    # "pandas_ta...",  <-- BORRADO. Lo instalaremos manualmente desde libs/
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.28",
    "requests>=2.31.0"
]

[project.optional-dependencies]
train = [
    "tensorflow>=2.12.0",
    "tf2onnx>=1.14.0",
    "onnx>=1.14.0",
    # Toolkit Linux x86
    "rknn-toolkit2 @ https://github.com/rockchip-linux/rknn-toolkit2/raw/master/rknn-toolkit2/packages/rknn_toolkit2-2.3.0-cp310-cp310-linux_x86_64.whl"
]
dev = ["ruff", "black", "pytest"]

[tool.ruff]
line-length = 100
target-version = "py39"
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
[tool.ruff.lint.isort]
known-first-party = ["src"]