[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lula-bot"
version = "2.2.0"
description = "AI Crypto Trading Bot with Monero Focus (Lullaby Protocol)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "CypherPunk Dev", email = "lula@sovereign.net"}
]

# --- 1. DEPENDENCIAS BASE (Runtime Orange Pi / Docker) ---
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.28",
    "requests>=2.31.0",
    # Usamos el fork mantenido por la comunidad ya que el original cayó
    "pandas_ta @ https://github.com/xgboosted/pandas-ta-classic/archive/refs/heads/main.zip"
]

# --- 2. DEPENDENCIAS OPCIONALES (Extras) ---
[project.optional-dependencies]

# Para entrenar en tu Mac (pip install ".[train]")
train = [
    "tensorflow>=2.12.0",
    "tf2onnx>=1.14.0",
    "onnx>=1.14.0"
    # Nota: rknn-toolkit2 NO se incluye aquí porque no existe para Mac.
    # Se usa vía Docker para la conversión final.
]

# Para desarrollo y calidad (pip install ".[dev]")
dev = [
    "ruff",
    "black",
    "pytest"
]

# --- 3. CONFIGURACIÓN DE CALIDAD DE CÓDIGO ---

# Configuración de RUFF (Linter rápido)
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"] # Errores, Pyflakes, Imports
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

# Configuración de BLACK (Formateador)
# Sincronizado a 100 caracteres para no pelearse con Ruff
[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'